force-app/main/default/objects/Component_Dependency__c/Component_Dependency__c.object-meta.xml
<CustomObject>
    <label>Component Dependency</label>
    <nameField>
        <displayFormat>GPBUMPD-{0000}</displayFormat>
        <label>Component Dependency Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Component Dependencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>