force-app/main/default/objects/Component_Dependency__c/fields/Demo_Component__c.field-meta.xml
<CustomField>
    <fullName>Demo_Component__c</fullName>
    <label>Demo Component</label>
    <referenceTo>Demo_Component__c</referenceTo>
    <relationshipLabel>Component Dependencies</relationshipLabel>
    <relationshipName>Component_Dependencies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>