force-app/main/default/objects/Component_Dependency__c/fields/Dependent_Component__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Component__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Dependent Component</label>
    <referenceTo>Demo_Component__c</referenceTo>
    <relationshipLabel>Demo Components Depending on This</relationshipLabel>
    <relationshipName>Components_Depending_On</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>