force-app/main/default/objects/Component_Dependency__c/fields/Installed__c.field-meta.xml
<CustomField>
    <fullName>Installed__c</fullName>
    <formula>IF(Dependent_Component__r.Installed__c = true, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installed</label>
    <type>Checkbox</type>
</CustomField>